--- a/WebStore/Views/Home/_details.cshtml
+++ b/WebStore/Views/Home/_details.cshtml
@@ -3,26 +3,53 @@
 @{
     ViewBag.Title = "_details";
 }
+<script src="~/Scripts/jquery-3.4.1.js" type="text/javascript"></script>
+<script src="~/Scripts/bootstrap.min.js" type="text/javascript"></script>
 
-<div class="row">
-    <div class="col-lg-12">
-        <div class="row">
-            <div class="col-lg-12">
-                <fieldset>
-                    <legend>Customer Info</legend>
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="row">
-                                <div class="col-lg-2">
-                                    @Model.worker_firstNM
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </fieldset>
-            </div>
+@using (Html.BeginForm("workerModel", "storeDiv", FormMethod.Post))
+{
+    <div id="storeDiv">
+        <div class="container">
+            @Html.LabelFor(m => m.usernameInput)
+            @Html.TextBoxFor(m => m.usernameInput, new 
+            { 
+                id = "usernameTxt"
+            })
+            @Html.LabelFor(m => m.passwordInput)
+            @Html.TextBoxFor(m => m.passwordInput, new 
+            { 
+                id = "passwordTxt",
+                type = "password"
+            })
         </div>
     </div>
-</div>
+}
+<button id="btnLogin">Login</button>
+
+<script>
+
+    $(document).ready(function () {
+        $('#btnLogin').click(function () {
+            var userInput = $('#usernameTxt').val();
+            var passInput = $('#passwordTxt').val();
+
+            alert('Username: ' + userInput + ' Password: ' + passInput);
+
+            $.ajax({
+                type: "POST",
+                url: "@Url.Action("GetAccount", "Home")",
+                dataType: "json",
+                data: JSON.stringify(storeDiv.data),
+                success: function (data) {
+                    console.log(data);
+                },
+                error: function (data) {
+                    alert('error');
+                    console.log(data);
+                }
+            });
+        })
+    });
+</script>
+
 
