--- a/WebStore/Views/Home/_details.cshtml
+++ b/WebStore/Views/Home/_details.cshtml
@@ -1,86 +1,2 @@
 ﻿@model WebStore.Models.workerModel
-
-@{
-    ViewBag.Title = "_details";
-}
-<script src="~/Scripts/jquery-3.4.1.js" type="text/javascript"></script>
-<script src="~/Scripts/bootstrap.min.js" type="text/javascript"></script>
-
-@using (Html.BeginForm("workerModel", "storeDiv", FormMethod.Post))
-{
-    <div id="storeDiv">
-        <div class="container">
-            @Html.LabelFor(m => m.usernameInput)
-            @Html.TextBoxFor(m => m.usernameInput, new 
-            { 
-                id = "usernameTxt"
-            })
-            @Html.LabelFor(m => m.passwordInput)
-            @Html.TextBoxFor(m => m.passwordInput, new 
-            { 
-                id = "passwordTxt",
-                type = "password"
-            })
-        </div>
-    </div>
-}
-<button id="btnLogin">Login</button>
-
-<script>
-
-    var resultLogin = "";
-
-    $(document).ready(function () {
-        $('#btnLogin').click(function () {
-            var userInput = $('#usernameTxt').val();
-            var passInput = $('#passwordTxt').val();
-
-            var data = {
-                usernameInput: userInput,
-                passwordInput: passInput,
-                isvalid: true
-            }
-
-            CheckLogin(data);
-            if (data.isvalid != true) {
-                returnLogin(data)
-            }
-        })
-
-        function CheckLogin(data) {
-
-            $.ajax({
-                type: "POST",
-                url: "@Url.Action("GetAccount", "Home")",
-                dataType: "json",
-                cache: false,
-                data: data,
-                success: function (data) {
-                    console.log(data);
-                },
-                error: function (data) {
-                    alert('error');
-                    console.log(data);
-                }
-            });
-        }
-        function returnLogin(data) {
-            $.ajax({
-                url: "@Url.Action("ReturnUserInformation", "Home")",
-                type: 'POST',
-                contentType: 'application/json;',
-                data: data,
-                success: function (data) {
-                    alert('SUCCSESFUL');
-                },
-                error: function () {
-                    alert('ERROR');
-                }
-
-            });
-
-        }
-    });
-</script>
-
-
+Login sucessfully
